Add pom dependency to jsr250 in benchmark

--- a/pom.xml
+++ b/pom.xml
@@ -146,6 +146,11 @@
         <version>${cup.version}</version>
       </dependency>
       <dependency>
+        <groupId>javax.annotation</groupId>
+        <artifactId>jsr250-api</artifactId>
+        <version>1.0</version>
+      </dependency>
+      <dependency>
         <groupId>org.apache.ant</groupId>
         <artifactId>ant</artifactId>
         <version>1.10.5</version>
