--- a/jflex/examples/cup-interpreter/pom.xml
+++ b/jflex/examples/cup-interpreter/pom.xml
@@ -15,6 +15,11 @@
       <version>11b-20160615</version>
     </dependency>
     <dependency>
+      <groupId>javax.annotation</groupId>
+      <artifactId>jsr250-api</artifactId>
+      <version>1.0</version>
+    </dependency>
+    <dependency>
       <groupId>junit</groupId>
       <artifactId>junit</artifactId>
       <version>4.12</version>
