--- a/jflex/examples/simple/pom.xml
+++ b/jflex/examples/simple/pom.xml
@@ -13,6 +13,11 @@
         small simple scanner looks like.</description>
   <dependencies>
     <dependency>
+      <groupId>javax.annotation</groupId>
+      <artifactId>jsr250-api</artifactId>
+      <version>1.0</version>
+    </dependency>
+    <dependency>
       <groupId>junit</groupId>
       <artifactId>junit</artifactId>
       <version>4.12</version>
