--- a/jflex/examples/standalone/pom.xml
+++ b/jflex/examples/standalone/pom.xml
@@ -11,6 +11,11 @@ It reads a name after the keyword name and replaces all occurrences
 of "hello" by "hello &lt;name&gt; !".</description>
   <dependencies>
     <dependency>
+      <groupId>javax.annotation</groupId>
+      <artifactId>jsr250-api</artifactId>
+      <version>1.0</version>
+    </dependency>
+    <dependency>
       <groupId>junit</groupId>
       <artifactId>junit</artifactId>
       <version>4.12</version>
