Upgrade to javax-annotation 1.3.2
https://mvnrepository.com/artifact/javax.annotation/jsr250-api indicates that this artifact has moved to javax.annotation » javax.annotation-api

--- a/java/jflex/testing/testsuite/BUILD.bazel
+++ b/java/jflex/testing/testsuite/BUILD.bazel
@@ -26,7 +26,7 @@ java_library(
 
 genrule(
     name = "jsr250_jar",
-    srcs = ["//third_party/java:jsr250"],
-    outs = ["jsr250.jar"],
+    srcs = ["//third_party/javax:annotation"],
+    outs = ["javax.annotation.jar"],
     cmd = "cp $< $@",
 )
