--- a/jflex/examples/zero-reader/pom.xml
+++ b/jflex/examples/zero-reader/pom.xml
@@ -9,6 +9,11 @@
     characters.</description>
   <dependencies>
     <dependency>
+      <groupId>javax.annotation</groupId>
+      <artifactId>javax.annotation-api</artifactId>
+      <version>1.3.2</version>
+    </dependency>
+    <dependency>
       <groupId>junit</groupId>
       <artifactId>junit</artifactId>
       <version>4.12</version>
