--- a/benchmark/pom.xml
+++ b/benchmark/pom.xml
@@ -13,7 +13,7 @@
   <dependencies>
     <dependency>
       <groupId>javax.annotation</groupId>
-      <artifactId>jsr250-api</artifactId>
+      <artifactId>javax.annotation-api</artifactId>
     </dependency>
     <dependency>
       <groupId>junit</groupId>
