--- a/javatests/jflex/testcase/ccl_16/BUILD.bazel
+++ b/javatests/jflex/testcase/ccl_16/BUILD.bazel
@@ -15,6 +15,6 @@ java_test(
     ],
     deps = [
         "//third_party/com/google/truth",
-        "//third_party/java:jsr250",
+        "//third_party/javax:annotation",
     ],
 )
