--- a/javatests/jflex/testcase/generics/BUILD.bazel
+++ b/javatests/jflex/testcase/generics/BUILD.bazel
@@ -19,7 +19,7 @@ java_library(
     deps = [
         "//java/jflex/testing/testsuite/golden",
         "//third_party/com/google/guava",
-        "//third_party/java:jsr250",
+        "//third_party/javax:annotation",
     ],
 )
 
@@ -56,7 +56,7 @@ java_library(
     deps = [
         "//java/jflex/testing/testsuite/golden",
         "//third_party/com/google/guava",
-        "//third_party/java:jsr250",
+        "//third_party/javax:annotation",
     ],
 )
 
@@ -93,7 +93,7 @@ java_library(
     deps = [
         "//java/jflex/testing/testsuite/golden",
         "//third_party/com/google/guava",
-        "//third_party/java:jsr250",
+        "//third_party/javax:annotation",
     ],
 )
 
@@ -130,7 +130,7 @@ java_library(
     deps = [
         "//java/jflex/testing/testsuite/golden",
         "//third_party/com/google/guava",
-        "//third_party/java:jsr250",
+        "//third_party/javax:annotation",
     ],
 )
 
