--- a/jflex/examples/cup-java-minijava/pom.xml
+++ b/jflex/examples/cup-java-minijava/pom.xml
@@ -13,6 +13,11 @@
       <version>11b-20160615</version>
     </dependency>
     <dependency>
+      <groupId>javax.annotation</groupId>
+      <artifactId>javax.annotation-api</artifactId>
+      <version>1.3.2</version>
+    </dependency>
+    <dependency>
       <groupId>junit</groupId>
       <artifactId>junit</artifactId>
       <version>4.12</version>
