--- a/jflex/examples/cup-java/pom.xml
+++ b/jflex/examples/cup-java/pom.xml
@@ -16,8 +16,8 @@
     </dependency>
     <dependency>
       <groupId>javax.annotation</groupId>
-      <artifactId>jsr250-api</artifactId>
-      <version>1.0</version>
+      <artifactId>javax.annotation-api</artifactId>
+      <version>1.3.2</version>
     </dependency>
     <dependency>
       <groupId>junit</groupId>
