--- a/jflex/examples/simple/pom.xml
+++ b/jflex/examples/simple/pom.xml
@@ -14,8 +14,8 @@
   <dependencies>
     <dependency>
       <groupId>javax.annotation</groupId>
-      <artifactId>jsr250-api</artifactId>
-      <version>1.0</version>
+      <artifactId>javax.annotation-api</artifactId>
+      <version>1.3.2</version>
     </dependency>
     <dependency>
       <groupId>junit</groupId>
