--- a/jflex/examples/standalone/pom.xml
+++ b/jflex/examples/standalone/pom.xml
@@ -12,8 +12,8 @@ of "hello" by "hello &lt;name&gt; !".</description>
   <dependencies>
     <dependency>
       <groupId>javax.annotation</groupId>
-      <artifactId>jsr250-api</artifactId>
-      <version>1.0</version>
+      <artifactId>javax.annotation-api</artifactId>
+      <version>1.3.2</version>
     </dependency>
     <dependency>
       <groupId>junit</groupId>
