--- a/pom.xml
+++ b/pom.xml
@@ -298,7 +298,12 @@
         </plugin>
         <plugin>
           <artifactId>maven-surefire-plugin</artifactId>
-          <version>3.0.0-M3</version>
+          <version>3.0.0-M5</version>
+          <configuration>
+              <forkCount>2</forkCount>
+              <reuseForks>true</reuseForks>
+              <argLine>-Xmx1024m</argLine>
+          </configuration>
         </plugin>
       </plugins>
     </pluginManagement>
