--- a/docs/BUILD.bazel
+++ b/docs/BUILD.bazel
@@ -29,13 +29,16 @@ latex_document(
         ":fig/jflex-black.png",
         ":first_page",
         ":latex_content",
+        "manual.bib",
     ] + TEX_SRCS + [
+        "@bazel_latex//packages:biblatex",
         "@bazel_latex//packages:geometry",
         "@bazel_latex//packages:graphicx",
         "@bazel_latex//packages:hyperref",
         "@bazel_latex//packages:microtype",
         "@bazel_latex//packages:upquote",
     ],
+    cmd_flags = ["--bibtex-cmd=biber"],
     main = "manual_full.tex",
 )
 
@@ -50,7 +53,7 @@ genrule(
     name = "latex_content",
     srcs = TEX_SRCS,
     outs = ["_content.tex"],
-    cmd = "echo '" + ("\n".join(["\\input{docs/md/" + section + "_tex}" for section in DOC_SECTIONS])) + "' > $@",
+    cmd = "echo '" + "\n".join(["\\input{docs/md/" + section + "_tex}" for section in DOC_SECTIONS]) + "' > $@",
     output_to_bindir = True,  # that's where pdf_latex looks into
 )
 
