--- a/.cirrus.yml
+++ b/.cirrus.yml
@@ -20,6 +20,9 @@ bazel_build__test_task:
   - bazel --bazelrc=.ci.bazelrc test  --remote_http_cache=http://$CIRRUS_HTTP_CACHE_HOST  //javatests/jflex/testcase/...
   test_all_script:
   - bazel --bazelrc=.ci.bazelrc test  --remote_http_cache=http://$CIRRUS_HTTP_CACHE_HOST  //...
+  manual_artifacts:
+    path: "bazel-out/*/bin/docs/manual.pdf"
+    type: application/pdf
   always:
     junit_artifacts:
       path: "bazel-out/*/testlogs/**/test.xml"
