--- a/java/jflex/ucd_generator/model/BUILD.bazel
+++ b/java/jflex/ucd_generator/model/BUILD.bazel
@@ -11,6 +11,7 @@ java_library(
         "//java/jflex/ucd_generator/util:hexa_utils",
         "//java/jflex/ucd_generator/util:name_normalizer",
         "//java/jflex/ucd_generator/util:surrogate_utils",
+        "//third_party/com/google/code/findbugs:jsr305",
         "//third_party/com/google/guava",
     ],
 )
