--- a/javatests/jflex/ucd_generator/BUILD.bazel
+++ b/javatests/jflex/ucd_generator/BUILD.bazel
@@ -3,7 +3,9 @@ java_test(
     srcs = ["UcdGeneratorIntegrationTest.java"],
     data = [
         "Unicode_5_0.java.golden",
+        "Unicode_6_3.java.golden",
         "//third_party/unicode:ucd_5_0_0",
+        "//third_party/unicode:ucd_6_3_0",
     ],
     deps = [
         ":tested_versions",
@@ -18,7 +20,7 @@ java_test(
     name = "UcdScannerIntegrationTest",
     srcs = ["UcdScannerIntegrationTest.java"],
     data = [
-        "//third_party/unicode:ucd_6_0_0",
+        "//third_party/unicode:ucd_5_0_0",
     ],
     deps = [
         ":tested_versions",
