Add bibliography to the Bazel-generated manual (#802)
* Upgrade to babel_latex rule v1.0

* Build PDF with biblatex and bibliography

* End manual with bibliography

* Add the manual.pdf to the Cirrus artefacts.

--- a/.cirrus.yml
+++ b/.cirrus.yml
@@ -25,6 +25,9 @@ bazel_build_and_test_task:
   binary_artifacts:
     path: "bazel-out/*/bin/jflex/jflex_bin_deploy.jar"
     type: application/java-archive
+  manual_artifacts:
+    path: "bazel-out/*/bin/docs/manual.pdf"
+    type: application/pdf
   always:
     junit_artifacts:
       path: "bazel-out/*/testlogs/**/test.xml"
