--- a/javatests/jflex/ucd_generator/BUILD.bazel
+++ b/javatests/jflex/ucd_generator/BUILD.bazel
@@ -2,8 +2,10 @@ java_test(
     name = "UcdGeneratorIntegrationTest",
     srcs = ["UcdGeneratorIntegrationTest.java"],
     data = [
+        "Unicode_10_0.java.golden",
         "Unicode_5_0.java.golden",
         "Unicode_6_3.java.golden",
+        "//third_party/unicode:ucd_10",
         "//third_party/unicode:ucd_5_0_0",
         "//third_party/unicode:ucd_6_3_0",
     ],
