--- a/javatests/jflex/ucd_generator/BUILD.bazel
+++ b/javatests/jflex/ucd_generator/BUILD.bazel
@@ -1,4 +1,17 @@
 java_test(
+    name = "MainTest",
+    srcs = ["MainTest.java"],
+    data = [
+        "//third_party/unicode:ucd_10",
+    ],
+    deps = [
+        "//java/jflex/ucd_generator:Main",
+        "//java/jflex/ucd_generator/ucd",
+        "//third_party/com/google/truth",
+    ],
+)
+
+java_test(
     name = "UcdGeneratorIntegrationTest",
     srcs = ["UcdGeneratorIntegrationTest.java"],
     data = [
