UCD Generator of emoji (#812)
* UCD Generator: Use the normalized property value when building Script_Extensions

* Optimization: Copy the Script to Script_Extensions at the end of the scan.

* Add  "emoji-data.txt" in Bazel third_party resources
   For emoji 2, 4, 5 (resp. Unicode 8, 9, 10)

* Add emoji resources for Unicode 11.0 12.0 and 12.1

* Scan emoji file

  * Detect emoji-data.txt from command line args.

* Include pervious version in DerivedAge by `Version` rather than by String.

  The string ordering incorreclty placed v10.0 before v1.1

--- a/javatests/jflex/ucd_generator/BUILD.bazel
+++ b/javatests/jflex/ucd_generator/BUILD.bazel
@@ -1,9 +1,24 @@
 java_test(
+    name = "MainTest",
+    srcs = ["MainTest.java"],
+    data = [
+        "//third_party/unicode:ucd_10",
+    ],
+    deps = [
+        "//java/jflex/ucd_generator:Main",
+        "//java/jflex/ucd_generator/ucd",
+        "//third_party/com/google/truth",
+    ],
+)
+
+java_test(
     name = "UcdGeneratorIntegrationTest",
     srcs = ["UcdGeneratorIntegrationTest.java"],
     data = [
+        "Unicode_10_0.java.golden",
         "Unicode_5_0.java.golden",
         "Unicode_6_3.java.golden",
+        "//third_party/unicode:ucd_10",
         "//third_party/unicode:ucd_5_0_0",
         "//third_party/unicode:ucd_6_3_0",
     ],
