Also generate UCD for 4.1

--- a/jflex/src/main/java/jflex/core/unicode/BUILD.bazel
+++ b/jflex/src/main/java/jflex/core/unicode/BUILD.bazel
@@ -27,7 +27,7 @@ genrule(
         #        "//third_party/unicode:ucd_3_1_1",
         #        "//third_party/unicode:ucd_3_2_0",
         #        "//third_party/unicode:ucd_4_0_1",
-        #        "//third_party/unicode:ucd_4_1_0",
+        "//third_party/unicode:ucd_4_1_0",
         "//third_party/unicode:ucd_5_0_0",
         "//third_party/unicode:ucd_5_1_0",
         "//third_party/unicode:ucd_5_2_0",
@@ -52,7 +52,7 @@ genrule(
         #        "Unicode_3_1.java",
         #        "Unicode_3_2.java",
         #        "Unicode_4_0.java",
-        #        "Unicode_4_1.java",
+        "Unicode_4_1.java",
         "Unicode_5_0.java",
         "Unicode_5_1.java",
         "Unicode_5_2.java",
@@ -76,7 +76,7 @@ genrule(
           #          " --version=3.1.1 $(locations //third_party/unicode:ucd_3_1_1)" +
           #          " --version=3.2.0 $(locations //third_party/unicode:ucd_3_2_0)" +
           #          " --version=4.0.1 $(locations //third_party/unicode:ucd_4_0_1)" +
-          #          " --version=4.1.0 $(locations //third_party/unicode:ucd_4_1_0)" +
+          " --version=4.1.0 $(locations //third_party/unicode:ucd_4_1_0)" +
           " --version=5.0.0 $(locations //third_party/unicode:ucd_5_0_0)" +
           " --version=5.1.0 $(locations //third_party/unicode:ucd_5_1_0)" +
           " --version=5.2.0 $(locations //third_party/unicode:ucd_5_2_0)" +
