Cover all Unicode versions from 4.1

--- a/javatests/jflex/ucd_generator/BUILD.bazel
+++ b/javatests/jflex/ucd_generator/BUILD.bazel
@@ -18,11 +18,21 @@ java_test(
         "Unicode_10_0.java.golden",
         "Unicode_5_0.java.golden",
         "Unicode_6_3.java.golden",
-        "//jflex/src/main/java/jflex/core/unicode:data/Unicode_4_1.java",
         "//third_party/unicode:ucd_10",
+        "//third_party/unicode:ucd_11",
+        "//third_party/unicode:ucd_12",
+        "//third_party/unicode:ucd_12_1",
         "//third_party/unicode:ucd_4_1_0",
         "//third_party/unicode:ucd_5_0_0",
+        "//third_party/unicode:ucd_5_1_0",
+        "//third_party/unicode:ucd_5_2_0",
+        "//third_party/unicode:ucd_6_0_0",
+        "//third_party/unicode:ucd_6_1_0",
+        "//third_party/unicode:ucd_6_2_0",
         "//third_party/unicode:ucd_6_3_0",
+        "//third_party/unicode:ucd_7",
+        "//third_party/unicode:ucd_8",
+        "//third_party/unicode:ucd_9",
     ],
     deps = [
         ":tested_versions",
