Add test that bazel-generated UCD is equal to the current implementation (#821)
* Add Java AST-diff to test Unicode_x_y.java files are unchanged.

* Cover all Unicode versions from 4.1
  - Ignor eUnicode_6_0 for now, which has a test failure.

* Add Eclipse JDT in //third_party

--- a/jflex/src/main/java/jflex/core/unicode/BUILD.bazel
+++ b/jflex/src/main/java/jflex/core/unicode/BUILD.bazel
@@ -9,7 +9,10 @@ java_library(
         "ILexScan.java",
         "UnicodeProperties.java",
     ],
-    visibility = ["//jflex:__subpackages__"],
+    visibility = [
+        "//javatests:__subpackages__",
+        "//jflex:__subpackages__",
+    ],
     deps = [
         "//jflex/src/main/java/jflex/base",
         "//jflex/src/main/java/jflex/chars",
