--- a/javatests/jflex/ucd_generator/BUILD.bazel
+++ b/javatests/jflex/ucd_generator/BUILD.bazel
@@ -19,15 +19,29 @@ java_test(
         "Unicode_5_0.java.golden",
         "Unicode_6_3.java.golden",
         "//third_party/unicode:ucd_10",
+        "//third_party/unicode:ucd_11",
+        "//third_party/unicode:ucd_12",
+        "//third_party/unicode:ucd_12_1",
         "//third_party/unicode:ucd_4_1_0",
         "//third_party/unicode:ucd_5_0_0",
+        "//third_party/unicode:ucd_5_1_0",
+        "//third_party/unicode:ucd_5_2_0",
+        "//third_party/unicode:ucd_6_0_0",
+        "//third_party/unicode:ucd_6_1_0",
+        "//third_party/unicode:ucd_6_2_0",
         "//third_party/unicode:ucd_6_3_0",
+        "//third_party/unicode:ucd_7",
+        "//third_party/unicode:ucd_8",
+        "//third_party/unicode:ucd_9",
     ],
     deps = [
         ":tested_versions",
         "//java/jflex/testing/diff",
+        "//java/jflex/testing/javaast",
         "//java/jflex/ucd_generator",
         "//java/jflex/ucd_generator/ucd",
+        "//jflex/src/main/java/jflex/core/unicode",
+        "//third_party/com/google/auto_value",
         "//third_party/com/google/truth",
     ],
 )
