--- a/javatests/jflex/ucd_generator/BUILD.bazel
+++ b/javatests/jflex/ucd_generator/BUILD.bazel
@@ -23,6 +23,9 @@ java_test(
         "//third_party/unicode:ucd_11",
         "//third_party/unicode:ucd_12",
         "//third_party/unicode:ucd_12_1",
+        "//third_party/unicode:ucd_3_0_1",
+        "//third_party/unicode:ucd_3_1_1",
+        "//third_party/unicode:ucd_3_2_0",
         "//third_party/unicode:ucd_4_0_1",
         "//third_party/unicode:ucd_4_1_0",
         "//third_party/unicode:ucd_5_0_0",
