Move Version in its own package; it's more general than the ucd_generator.

--- a/java/de/jflex/ucd_generator/model/BUILD.bazel
+++ b/java/de/jflex/ucd_generator/model/BUILD.bazel
@@ -11,6 +11,7 @@ java_library(
         "//java/de/jflex/ucd_generator/util:hexa_utils",
         "//java/de/jflex/ucd_generator/util:name_normalizer",
         "//java/de/jflex/ucd_generator/util:surrogate_utils",
+        "//java/de/jflex/version",
         "//third_party/com/google/code/findbugs:jsr305",
         "//third_party/com/google/guava",
     ],
