--- a/java/de/jflex/ucd_generator/BUILD.bazel
+++ b/java/de/jflex/ucd_generator/BUILD.bazel
@@ -16,6 +16,7 @@ java_library(
         "//java/de/jflex/ucd_generator/ucd",
         "//java/de/jflex/util/javac",
         "//java/de/jflex/velocity",
+        "//java/de/jflex/version",
         "//third_party/com/google/auto_value",
         "//third_party/com/google/guava",
         "//third_party/org/apache/velocity",
@@ -29,6 +30,7 @@ java_binary(
     deps = [
         ":ucd_generator",
         "//java/de/jflex/ucd_generator/ucd",
+        "//java/de/jflex/version",
         "//third_party/com/google/guava",
     ],
 )
