--- a/javatests/de/jflex/ucd_generator/ucd/BUILD.bazel
+++ b/javatests/de/jflex/ucd_generator/ucd/BUILD.bazel
@@ -9,6 +9,25 @@ java_test(
 )
 
 java_test(
+    name = "SurrogateUtilsTest",
+    srcs = ["SurrogateUtilsTest.java"],
+    deps = [
+        "//java/de/jflex/ucd_generator/ucd",
+        "//third_party/com/google/truth",
+    ],
+)
+
+java_test(
+    name = "UnicodeDataTest",
+    srcs = ["UnicodeDataTest.java"],
+    deps = [
+        "//java/de/jflex/ucd_generator/ucd",
+        "//javatests/de/jflex/ucd_generator:tested_versions",
+        "//third_party/com/google/truth",
+    ],
+)
+
+java_test(
     name = "UcdVersionsTest",
     srcs = ["UcdVersionsTest.java"],
     deps = [
