--- a/java/de/jflex/ucd_generator/BUILD.bazel
+++ b/java/de/jflex/ucd_generator/BUILD.bazel
@@ -5,13 +5,12 @@ java_library(
     srcs = [
         "UcdGenerator.java",
         "UcdGeneratorParams.java",
-        "UcdScanner.java",
     ],
     deps = [
         "//java/de/jflex/ucd_generator/emitter/unicode_properties",
         "//java/de/jflex/ucd_generator/emitter/unicode_version",
+        "//java/de/jflex/ucd_generator/scanner",
         "//java/de/jflex/ucd_generator/scanner:exception",
-        "//java/de/jflex/ucd_generator/scanner:ucd_scanners",
         "//java/de/jflex/ucd_generator/ucd",
         "//java/de/jflex/util/javac",
         "//java/de/jflex/velocity",
