Clean-up UCD scanner code (#829)
* Remove hacks in UnicodeData.java
  Now that all scanners are in place, there is no need to hack "Script" and "Casefolding" to their aliases.

* Move call to PropertyNameNormalizer.normalize() in the abstract class.
   Java Code is easier to edit in .java than in .jflex.

* Remove incorrect TODOs

* Move Version in its own package; it's more general than the ucd_generator.

* Move all UCD models in the same package.

* Move UcdScanner in package scanner.

--- a/java/de/jflex/ucd_generator/BUILD.bazel
+++ b/java/de/jflex/ucd_generator/BUILD.bazel
@@ -5,17 +5,16 @@ java_library(
     srcs = [
         "UcdGenerator.java",
         "UcdGeneratorParams.java",
-        "UcdScanner.java",
     ],
     deps = [
         "//java/de/jflex/ucd_generator/emitter/unicode_properties",
         "//java/de/jflex/ucd_generator/emitter/unicode_version",
-        "//java/de/jflex/ucd_generator/model",
+        "//java/de/jflex/ucd_generator/scanner",
         "//java/de/jflex/ucd_generator/scanner:exception",
-        "//java/de/jflex/ucd_generator/scanner:ucd_scanners",
         "//java/de/jflex/ucd_generator/ucd",
         "//java/de/jflex/util/javac",
         "//java/de/jflex/velocity",
+        "//java/de/jflex/version",
         "//third_party/com/google/auto_value",
         "//third_party/com/google/guava",
         "//third_party/org/apache/velocity",
@@ -29,6 +28,7 @@ java_binary(
     deps = [
         ":ucd_generator",
         "//java/de/jflex/ucd_generator/ucd",
+        "//java/de/jflex/version",
         "//third_party/com/google/guava",
     ],
 )
