--- a/javatests/de/jflex/ucd_generator/BUILD.bazel
+++ b/javatests/de/jflex/ucd_generator/BUILD.bazel
@@ -3,6 +3,7 @@ java_test(
     srcs = ["MainTest.java"],
     data = [
         "//third_party/unicode:ucd_10",
+        "//third_party/unicode:ucd_3_1_1",
         "//third_party/unicode:ucd_4_0_1",
     ],
     deps = [
