Also Generate Unicode 3.2 with Bazel

--- a/jflex/src/main/java/jflex/core/unicode/BUILD.bazel
+++ b/jflex/src/main/java/jflex/core/unicode/BUILD.bazel
@@ -28,7 +28,7 @@ genrule(
         #        "//third_party/unicode:ucd_2_1_9",
         #        "//third_party/unicode:ucd_3_0_1",
         #        "//third_party/unicode:ucd_3_1_1",
-        #        "//third_party/unicode:ucd_3_2_0",
+        "//third_party/unicode:ucd_3_2_0",
         "//third_party/unicode:ucd_4_0_1",
         "//third_party/unicode:ucd_4_1_0",
         "//third_party/unicode:ucd_5_0_0",
@@ -53,7 +53,7 @@ genrule(
         #        "Unicode_2_1.java",
         #        "Unicode_3_0.java",
         #        "Unicode_3_1.java",
-        #        "Unicode_3_2.java",
+        "Unicode_3_2.java",
         "Unicode_4_0.java",
         "Unicode_4_1.java",
         "Unicode_5_0.java",
@@ -77,7 +77,7 @@ genrule(
           #          " --version=2.1.9 $(locations //third_party/unicode:ucd_2_1_9)" +
           #          " --version=3.0.1 $(locations //third_party/unicode:ucd_3_0_1)" +
           #          " --version=3.1.1 $(locations //third_party/unicode:ucd_3_1_1)" +
-          #          " --version=3.2.0 $(locations //third_party/unicode:ucd_3_2_0)" +
+          " --version=3.2.0 $(locations //third_party/unicode:ucd_3_2_0)" +
           " --version=4.0.1 $(locations //third_party/unicode:ucd_4_0_1)" +
           " --version=4.1.0 $(locations //third_party/unicode:ucd_4_1_0)" +
           " --version=5.0.0 $(locations //third_party/unicode:ucd_5_0_0)" +
