Generate Unicode 3.1 and 3.2 with Bazel (#828)
* Generate Unicode 3.1 and 3.2
  * **Hack** Do not generate "blk" propertyValueAliases on Version 3.2.

* Add DerivedAge
  * Add DerivedAge on Unicode 3.2.0
  * Add the UNIDATA DerivedAge on Unicode 2.0 - 3.1, and adapt the `findUcdFile()` accordingly

* Also
   * Optimization: get `propertyValueAliases()` only once in `computeUsedPropertyValueAliases()`
   * [Not used] Port "Give the Unassigned Age property value to the absolute complement of the highest version's  range set." from jflex-unicode-maven-plugin. However, this doesn't seem useful, and is left uncalled.
  * Rename CodepointRangeSet.substract(List) to CodepointRangeSet.substractAll(Collection)

--- a/javatests/de/jflex/ucd_generator/BUILD.bazel
+++ b/javatests/de/jflex/ucd_generator/BUILD.bazel
@@ -3,6 +3,7 @@ java_test(
     srcs = ["MainTest.java"],
     data = [
         "//third_party/unicode:ucd_10",
+        "//third_party/unicode:ucd_3_1_1",
         "//third_party/unicode:ucd_4_0_1",
     ],
     deps = [
@@ -23,6 +24,9 @@ java_test(
         "//third_party/unicode:ucd_11",
         "//third_party/unicode:ucd_12",
         "//third_party/unicode:ucd_12_1",
+        "//third_party/unicode:ucd_3_0_1",
+        "//third_party/unicode:ucd_3_1_1",
+        "//third_party/unicode:ucd_3_2_0",
         "//third_party/unicode:ucd_4_0_1",
         "//third_party/unicode:ucd_4_1_0",
         "//third_party/unicode:ucd_5_0_0",
