Use JFlex to generate the archaic scanners.

--- a/java/de/jflex/ucd_generator/scanner/BUILD.bazel
+++ b/java/de/jflex/ucd_generator/scanner/BUILD.bazel
@@ -49,6 +49,9 @@ jflex(
     name = "gen_ucd_scanners",
     srcs = glob(["*.flex"]),
     outputs = [
+        "ArchaicBlocksScanner.java",
+        "ArchaicLineBreakScanner.java",
+        "ArchaicPropListScanner.java",
         "BinaryPropertiesFileScanner.java",
         "EnumeratedPropertyFileScanner.java",
         "PropertyAliasesScanner.java",
