--- a/javatests/de/jflex/ucd_generator/BUILD.bazel
+++ b/javatests/de/jflex/ucd_generator/BUILD.bazel
@@ -15,6 +15,7 @@ java_test(
 
 java_test(
     name = "UcdGeneratorIntegrationTest",
+    size = "medium",
     srcs = ["UcdGeneratorIntegrationTest.java"],
     data = [
         "Unicode_10_0.java.golden",
