Add Test for Unicode 2.1.9

--- a/javatests/de/jflex/ucd_generator/BUILD.bazel
+++ b/javatests/de/jflex/ucd_generator/BUILD.bazel
@@ -25,6 +25,7 @@ java_test(
         "//third_party/unicode:ucd_11",
         "//third_party/unicode:ucd_12",
         "//third_party/unicode:ucd_12_1",
+        "//third_party/unicode:ucd_2_1_9",
         "//third_party/unicode:ucd_3_0_1",
         "//third_party/unicode:ucd_3_1_1",
         "//third_party/unicode:ucd_3_2_0",
